[gd_scene load_steps=9 format=4 uid="uid://dh8cy7t2ceti5"]

[ext_resource type="Script" uid="uid://cnd74vp62bkot" path="res://Cenas/Rooms/MegaGhostRoom/mega_ghost_room.gd" id="1_akcp5"]
[ext_resource type="PackedScene" uid="uid://b004ceoelpayb" path="res://Cenas/Objects/TileMao/tile_map_main.tscn" id="2_usvkd"]
[ext_resource type="PackedScene" uid="uid://dsa5vodvq7v6n" path="res://Cenas/Rooms/Door/Door.tscn" id="3_gf7wg"]
[ext_resource type="PackedScene" uid="uid://bts2u7o7pqcl6" path="res://Cenas/Enemie/Bosses/MegaGhost/MegaGhost.tscn" id="4_busjt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_busjt"]
size = Vector2(217, 502)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_adp6g"]
size = Vector2(822, 138)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2wnqr"]
size = Vector2(834, 176)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_06qbf"]
size = Vector2(199, 518)

[node name="MegaGhostRoom" type="Node2D" node_paths=PackedStringArray("down_coll", "up_coll", "left_coll", "right_coll", "boss")]
script = ExtResource("1_akcp5")
down_coll = NodePath("DownColl")
up_coll = NodePath("UpColl")
left_coll = NodePath("LeftColl")
right_coll = NodePath("RightColl")
boss = NodePath("MegaGhost")
metadata/_edit_vertical_guides_ = [-176.0, 420.0]
metadata/_edit_horizontal_guides_ = [16.0, 174.0]

[node name="TileMapMain" parent="." instance=ExtResource("2_usvkd")]
tile_map_data = PackedByteArray("AAAAAAAAAAABAAIAAAAAAAEAAAAEAAUAAAAAAAIAAAABAAIAAAAAAAMAAAABAAgAAAAAAAQAAAABAAIAAAAAAAUAAAABAAIAAAAAAAYAAAAEAAUAAAAAAAcAAAABAAIAAAAAAAgAAAABAAIAAAAAAAkAAAAEAAUAAAAAAAoAAAABAAIAAAAAAAsAAAABAAIAAAABAAAAAAAEAAUAAAABAAEAAAABAAgAAAABAAIAAAABAAgAAAABAAMAAAAEAAUAAAABAAQAAAABAAIAAAABAAUAAAABAAgAAAABAAYAAAABAAgAAAABAAcAAAAEAAUAAAABAAgAAAABAAgAAAABAAkAAAABAAIAAAABAAoAAAAEAAUAAAABAAsAAAAEAAUAAAACAAAAAAAEAAUAAAACAAEAAAABAAgAAAACAAIAAAABAAIAAAACAAMAAAAEAAUAAAACAAQAAAABAAgAAAACAAUAAAABAAgAAAACAAYAAAABAAIAAAACAAcAAAABAAgAAAACAAgAAAAEAAUAAAACAAkAAAABAAIAAAACAAoAAAABAAgAAAACAAsAAAABAAIAAAADAAAAAAABAAIAAAADAAEAAAAEAAUAAAADAAIAAAABAAIAAAADAAMAAAAEAAUAAAADAAQAAAAEAAUAAAADAAUAAAABAAIAAAADAAYAAAABAAgAAAADAAcAAAABAAIAAAADAAgAAAABAAgAAAADAAkAAAAEAAUAAAADAAoAAAABAAgAAAADAAsAAAABAAgAAAAEAAAAAAABAAIAAAAEAAEAAAAEAAUAAAAEAAIAAAABAAgAAAAEAAMAAAABAAIAAAAEAAQAAAABAAgAAAAEAAUAAAABAAgAAAAEAAYAAAAEAAUAAAAEAAcAAAABAAIAAAAEAAgAAAABAAgAAAAEAAkAAAABAAIAAAAEAAoAAAABAAgAAAAEAAsAAAAEAAUAAAAFAAAAAAABAAIAAAAFAAEAAAABAAIAAAAFAAIAAAABAAIAAAAFAAMAAAABAAIAAAAFAAQAAAAEAAUAAAAFAAUAAAABAAgAAAAFAAYAAAABAAIAAAAFAAcAAAABAAgAAAAFAAgAAAABAAgAAAAFAAkAAAAEAAUAAAAFAAoAAAABAAIAAAAFAAsAAAAEAAUAAAAGAAAAAAABAAIAAAAGAAEAAAABAAgAAAAGAAIAAAAEAAUAAAAGAAMAAAABAAIAAAAGAAQAAAAEAAUAAAAGAAUAAAAEAAUAAAAGAAYAAAABAAIAAAAGAAcAAAABAAgAAAAGAAgAAAABAAIAAAAGAAkAAAAEAAUAAAAGAAoAAAABAAgAAAAGAAsAAAABAAIAAAAHAAAAAAAEAAUAAAAHAAEAAAAEAAUAAAAHAAIAAAABAAIAAAAHAAMAAAAEAAUAAAAHAAQAAAABAAIAAAAHAAUAAAABAAIAAAAHAAYAAAABAAIAAAAHAAcAAAAEAAUAAAAHAAgAAAABAAgAAAAHAAkAAAABAAgAAAAHAAoAAAABAAgAAAAHAAsAAAAEAAUAAAAIAAAAAAABAAIAAAAIAAEAAAAEAAUAAAAIAAIAAAAEAAUAAAAIAAMAAAABAAgAAAAIAAQAAAAEAAUAAAAIAAUAAAAEAAUAAAAIAAYAAAABAAgAAAAIAAcAAAABAAgAAAAIAAgAAAAEAAUAAAAIAAkAAAABAAgAAAAIAAoAAAABAAIAAAAIAAsAAAAEAAUAAAAJAAAAAAAEAAUAAAAJAAEAAAABAAgAAAAJAAIAAAABAAgAAAAJAAMAAAAEAAUAAAAJAAQAAAAEAAUAAAAJAAUAAAAEAAUAAAAJAAYAAAAEAAUAAAAJAAcAAAABAAgAAAAJAAgAAAAEAAUAAAAJAAkAAAABAAgAAAAJAAoAAAABAAIAAAAJAAsAAAAEAAUAAAAKAAAAAAAEAAUAAAAKAAEAAAABAAgAAAAKAAIAAAABAAIAAAAKAAMAAAABAAIAAAAKAAQAAAAEAAUAAAAKAAUAAAAEAAUAAAAKAAYAAAABAAgAAAAKAAcAAAABAAIAAAAKAAgAAAAEAAUAAAAKAAkAAAAEAAUAAAAKAAoAAAAEAAUAAAAKAAsAAAABAAgAAAALAAAAAAABAAgAAAALAAEAAAABAAIAAAALAAIAAAAEAAUAAAALAAMAAAABAAgAAAALAAQAAAABAAIAAAALAAUAAAAEAAUAAAALAAYAAAABAAgAAAALAAcAAAAEAAUAAAALAAgAAAABAAgAAAALAAkAAAABAAgAAAALAAoAAAABAAIAAAALAAsAAAABAAIAAAAMAAAAAAABAAgAAAAMAAEAAAABAAIAAAAMAAIAAAABAAgAAAAMAAMAAAAEAAUAAAAMAAQAAAAEAAUAAAAMAAUAAAABAAgAAAAMAAYAAAABAAIAAAAMAAcAAAABAAIAAAAMAAgAAAABAAgAAAAMAAkAAAAEAAUAAAAMAAoAAAABAAgAAAAMAAsAAAABAAIAAAANAAAAAAABAAIAAAANAAEAAAABAAIAAAANAAIAAAABAAgAAAANAAMAAAABAAgAAAANAAQAAAAEAAUAAAANAAUAAAABAAIAAAANAAYAAAABAAIAAAANAAcAAAABAAIAAAANAAgAAAAEAAUAAAANAAkAAAABAAIAAAANAAoAAAABAAIAAAANAAsAAAAEAAUAAAAOAAAAAAABAAIAAAAOAAEAAAAEAAUAAAAOAAIAAAABAAgAAAAOAAMAAAABAAIAAAAOAAQAAAABAAgAAAAOAAUAAAABAAIAAAAOAAYAAAABAAIAAAAOAAcAAAAEAAUAAAAOAAgAAAAEAAUAAAAOAAkAAAABAAIAAAAOAAoAAAAEAAUAAAAOAAsAAAABAAIAAAAPAAAAAAAEAAUAAAAPAAEAAAABAAgAAAAPAAIAAAAEAAUAAAAPAAMAAAAEAAUAAAAPAAQAAAAEAAUAAAAPAAUAAAABAAgAAAAPAAYAAAABAAgAAAAPAAcAAAAEAAUAAAAPAAgAAAAEAAUAAAAPAAkAAAABAAgAAAAPAAoAAAABAAIAAAAPAAsAAAAEAAUAAAAQAAAAAAABAAIAAAAQAAEAAAABAAIAAAAQAAIAAAABAAgAAAAQAAMAAAAEAAUAAAAQAAQAAAABAAgAAAAQAAUAAAABAAIAAAAQAAYAAAABAAIAAAAQAAcAAAABAAIAAAAQAAgAAAABAAgAAAAQAAkAAAAEAAUAAAAQAAoAAAABAAgAAAAQAAsAAAAEAAUAAAD+/wAAAAAEAAUAAAD+/wEAAAABAAIAAAD+/wIAAAABAAgAAAD+/wMAAAABAAgAAAD+/wQAAAABAAIAAAD+/wUAAAAEAAUAAAD+/wYAAAAEAAUAAAD+/wcAAAABAAIAAAD+/wgAAAAEAAUAAAD+/wkAAAAEAAUAAAD+/woAAAAEAAUAAAD+/wsAAAAEAAUAAAD+/wwAAAAHAAsAAAD//wAAAAAEAAUAAAD//wEAAAABAAIAAAD//wIAAAABAAgAAAD//wMAAAABAAgAAAD//wQAAAABAAgAAAD//wUAAAABAAgAAAD//wYAAAABAAgAAAD//wcAAAAEAAUAAAD//wgAAAAEAAUAAAD//wkAAAABAAgAAAD//woAAAAEAAUAAAD//wsAAAABAAIAAAD//wwAAAAHAAsAAAD+/w0AAAAHAAsAAAD//w0AAAAHAAsAAAAAAAwAAAAHAAsAAAAAAA0AAAAHAAsAAAABAAwAAAAHAAsAAAABAA0AAAAHAAsAAAACAAwAAAAHAAsAAAACAA0AAAAHAAsAAAADAAwAAAAHAAsAAAADAA0AAAAHAAsAAAAEAAwAAAAHAAsAAAAEAA0AAAAHAAsAAAAFAAwAAAAHAAsAAAAFAA0AAAAHAAsAAAAGAAwAAAAHAAsAAAAGAA0AAAAHAAsAAAAHAAwAAAAHAAsAAAAHAA0AAAAHAAsAAAAIAAwAAAAHAAsAAAAIAA0AAAAHAAsAAAAJAAwAAAAHAAsAAAAJAA0AAAAHAAsAAAAKAAwAAAAHAAsAAAAKAA0AAAAHAAsAAAALAAwAAAAHAAsAAAALAA0AAAAHAAsAAAAMAAwAAAAHAAsAAAAMAA0AAAAHAAsAAAANAAwAAAAHAAsAAAANAA0AAAAHAAsAAAAOAAwAAAAHAAsAAAAOAA0AAAAHAAsAAAAPAAwAAAAHAAsAAAAPAA0AAAAHAAsAAAAQAAwAAAAHAAsAAAAQAA0AAAAHAAsAAAARAAwAAAAHAAsAAAARAA0AAAAHAAsAAAASAAwAAAAHAAsAAAASAA0AAAAHAAsAAAARAP7/AAAHAAsAAAARAP//AAAHAAsAAAARAAAAAAABAAIAAAARAAEAAAABAAIAAAARAAIAAAAEAAUAAAARAAMAAAABAAgAAAARAAQAAAABAAIAAAARAAUAAAABAAIAAAARAAYAAAABAAgAAAARAAcAAAAEAAUAAAARAAgAAAAEAAUAAAARAAkAAAABAAgAAAARAAoAAAABAAgAAAARAAsAAAABAAIAAAASAP7/AAAHAAsAAAASAP//AAAHAAsAAAASAAAAAAABAAgAAAASAAEAAAAEAAUAAAASAAIAAAABAAIAAAASAAMAAAAEAAUAAAASAAQAAAABAAIAAAASAAUAAAABAAgAAAASAAYAAAAEAAUAAAASAAcAAAABAAgAAAASAAgAAAABAAIAAAASAAkAAAABAAIAAAASAAoAAAABAAIAAAASAAsAAAABAAIAAAD+//7/AAAHAAsAAAD+////AAAHAAsAAAD///7/AAAHAAsAAAD/////AAAHAAsAAAAAAP7/AAAHAAsAAAAAAP//AAAHAAsAAAABAP7/AAAHAAsAAAABAP//AAAHAAsAAAACAP7/AAAHAAsAAAACAP//AAAHAAsAAAADAP7/AAAHAAsAAAADAP//AAAHAAsAAAAEAP7/AAAHAAsAAAAEAP//AAAHAAsAAAAFAP7/AAAHAAsAAAAFAP//AAAHAAsAAAAGAP7/AAAHAAsAAAAGAP//AAAHAAsAAAAHAP7/AAAHAAsAAAAHAP//AAAHAAsAAAAIAP7/AAAHAAsAAAAIAP//AAAHAAsAAAAJAP7/AAAHAAsAAAAJAP//AAAHAAsAAAAKAP7/AAAHAAsAAAAKAP//AAAHAAsAAAALAP7/AAAHAAsAAAALAP//AAAHAAsAAAAMAP7/AAAHAAsAAAAMAP//AAAHAAsAAAANAP7/AAAHAAsAAAANAP//AAAHAAsAAAAOAP7/AAAHAAsAAAAOAP//AAAHAAsAAAAPAP7/AAAHAAsAAAAPAP//AAAHAAsAAAAQAP7/AAAHAAsAAAAQAP//AAAHAAsAAAD7/wAAAAABAAIAAAD7/wEAAAAEAAUAAAD7/wIAAAABAAIAAAD7/wMAAAABAAIAAAD7/wQAAAABAAIAAAD7/wUAAAABAAIAAAD7/wYAAAABAAIAAAD7/wcAAAABAAIAAAD7/wgAAAABAAIAAAD8/wAAAAAEAAUAAAD8/wEAAAABAAIAAAD8/wIAAAABAAgAAAD8/wMAAAAEAAUAAAD8/wQAAAAEAAUAAAD8/wUAAAAEAAUAAAD8/wYAAAAEAAUAAAD8/wcAAAABAAIAAAD8/wgAAAABAAgAAAD9/wAAAAABAAIAAAD9/wEAAAABAAgAAAD9/wIAAAABAAgAAAD9/wMAAAABAAIAAAD9/wQAAAABAAgAAAD9/wUAAAAEAAUAAAD9/wYAAAABAAIAAAD9/wcAAAABAAIAAAD9/wgAAAABAAIAAAATAAAAAAABAAgAAAATAAEAAAABAAgAAAATAAIAAAABAAgAAAATAAMAAAAEAAUAAAATAAQAAAABAAIAAAATAAUAAAAEAAUAAAATAAYAAAABAAIAAAATAAcAAAABAAgAAAATAAgAAAAEAAUAAAAUAAAAAAAEAAUAAAAUAAEAAAABAAgAAAAUAAIAAAABAAgAAAAUAAMAAAABAAIAAAAUAAQAAAABAAgAAAAUAAUAAAABAAgAAAAUAAYAAAABAAgAAAAUAAcAAAABAAIAAAAUAAgAAAABAAgAAAAVAAAAAAAEAAUAAAAVAAEAAAABAAgAAAAVAAIAAAABAAIAAAAVAAMAAAABAAIAAAAVAAQAAAABAAgAAAAVAAUAAAABAAIAAAAVAAYAAAABAAIAAAAVAAcAAAABAAgAAAAVAAgAAAAEAAUAAAD7/wkAAAABAAgAAAD7/woAAAABAAgAAAD7/wsAAAAEAAUAAAD8/wkAAAABAAIAAAD8/woAAAAEAAUAAAD8/wsAAAAEAAUAAAD9/wkAAAAEAAUAAAD9/woAAAAEAAUAAAD9/wsAAAABAAgAAAATAAkAAAABAAIAAAATAAoAAAAEAAUAAAATAAsAAAABAAIAAAAUAAkAAAABAAgAAAAUAAoAAAABAAgAAAAUAAsAAAABAAIAAAAVAAkAAAABAAIAAAAVAAoAAAABAAgAAAAVAAsAAAAEAAUAAAATAAwAAAAHAAsAAAATAA0AAAAHAAsAAAAUAAwAAAAHAAsAAAAUAA0AAAAHAAsAAAAVAAwAAAAHAAsAAAAVAA0AAAAHAAsAAAAWAAwAAAAHAAsAAAAWAA0AAAAHAAsAAAAXAAwAAAAHAAsAAAAXAA0AAAAHAAsAAAAWAPz/AAAHAAsAAAAWAP3/AAAHAAsAAAAWAP7/AAAHAAsAAAAWAP//AAAHAAsAAAAWAAAAAAAHAAsAAAAWAAEAAAAHAAsAAAAWAAIAAAAHAAsAAAAWAAMAAAAHAAsAAAAWAAQAAAAHAAsAAAAWAAUAAAAHAAsAAAAWAAYAAAAHAAsAAAAWAAcAAAAHAAsAAAAWAAgAAAAHAAsAAAAWAAkAAAAHAAsAAAAWAAoAAAAHAAsAAAAWAAsAAAAHAAsAAAAXAPz/AAAHAAsAAAAXAP3/AAAHAAsAAAAXAP7/AAAHAAsAAAAXAP//AAAHAAsAAAAXAAAAAAAHAAsAAAAXAAEAAAAHAAsAAAAXAAIAAAAHAAsAAAAXAAMAAAAHAAsAAAAXAAQAAAAHAAsAAAAXAAUAAAAHAAsAAAAXAAYAAAAHAAsAAAAXAAcAAAAHAAsAAAAXAAgAAAAHAAsAAAAXAAkAAAAHAAsAAAAXAAoAAAAHAAsAAAAXAAsAAAAHAAsAAAD4//3/AAAHAAsAAAD4//7/AAAHAAsAAAD4////AAAHAAsAAAD5//3/AAAHAAsAAAD5//7/AAAHAAsAAAD5////AAAHAAsAAAD6//3/AAAHAAsAAAD6//7/AAAHAAsAAAD6////AAAHAAsAAAD7//3/AAAHAAsAAAD7//7/AAAHAAsAAAD7////AAAHAAsAAAD8//3/AAAHAAsAAAD8//7/AAAHAAsAAAD8////AAAHAAsAAAD9//3/AAAHAAsAAAD9//7/AAAHAAsAAAD9////AAAHAAsAAAD+//3/AAAHAAsAAAD///3/AAAHAAsAAAAAAP3/AAAHAAsAAAABAP3/AAAHAAsAAAACAP3/AAAHAAsAAAADAP3/AAAHAAsAAAAEAP3/AAAHAAsAAAAFAP3/AAAHAAsAAAAGAP3/AAAHAAsAAAAHAP3/AAAHAAsAAAAIAP3/AAAHAAsAAAAJAP3/AAAHAAsAAAAKAP3/AAAHAAsAAAALAP3/AAAHAAsAAAAMAP3/AAAHAAsAAAANAP3/AAAHAAsAAAAOAP3/AAAHAAsAAAAPAP3/AAAHAAsAAAAQAP3/AAAHAAsAAAARAP3/AAAHAAsAAAASAP3/AAAHAAsAAAATAP3/AAAHAAsAAAATAP7/AAAHAAsAAAATAP//AAAHAAsAAAAUAP3/AAAHAAsAAAAUAP7/AAAHAAsAAAAUAP//AAAHAAsAAAAVAP3/AAAHAAsAAAAVAP7/AAAHAAsAAAAVAP//AAAHAAsAAAD3////AAAHAAsAAAD3/wAAAAAHAAsAAAD3/wEAAAAHAAsAAAD3/wIAAAAHAAsAAAD3/wMAAAAHAAsAAAD3/wQAAAAHAAsAAAD3/wUAAAAHAAsAAAD3/wYAAAAHAAsAAAD3/wcAAAAHAAsAAAD3/wgAAAAHAAsAAAD3/wkAAAAHAAsAAAD3/woAAAAHAAsAAAD3/wsAAAAHAAsAAAD3/wwAAAAHAAsAAAD3/w0AAAAHAAsAAAD4/wAAAAAHAAsAAAD4/wEAAAAHAAsAAAD4/wIAAAAHAAsAAAD4/wMAAAAHAAsAAAD4/wQAAAAHAAsAAAD4/wUAAAAHAAsAAAD4/wYAAAAHAAsAAAD4/wcAAAAHAAsAAAD4/wgAAAAHAAsAAAD4/wkAAAAHAAsAAAD4/woAAAAHAAsAAAD4/wsAAAAHAAsAAAD4/wwAAAAHAAsAAAD4/w0AAAAHAAsAAAD5/wAAAAAHAAsAAAD5/wEAAAAHAAsAAAD5/wIAAAAHAAsAAAD5/wMAAAAHAAsAAAD5/wQAAAAHAAsAAAD5/wUAAAAHAAsAAAD5/wYAAAAHAAsAAAD5/wcAAAAHAAsAAAD5/wgAAAAHAAsAAAD5/wkAAAAHAAsAAAD5/woAAAAHAAsAAAD5/wsAAAAHAAsAAAD5/wwAAAAHAAsAAAD5/w0AAAAHAAsAAAD6/wAAAAAHAAsAAAD6/wEAAAAHAAsAAAD6/wIAAAAHAAsAAAD6/wMAAAAHAAsAAAD6/wQAAAAHAAsAAAD6/wUAAAAHAAsAAAD6/wYAAAAHAAsAAAD6/wcAAAAHAAsAAAD6/wgAAAAHAAsAAAD6/wkAAAAHAAsAAAD6/woAAAAHAAsAAAD6/wsAAAAHAAsAAAD6/wwAAAAHAAsAAAD6/w0AAAAHAAsAAAD7/wwAAAAHAAsAAAD7/w0AAAAHAAsAAAD8/wwAAAAHAAsAAAD8/w0AAAAHAAsAAAD9/wwAAAAHAAsAAAD9/w0AAAAHAAsAAAA=")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(136, 94)

[node name="SafeRoom" parent="." instance=ExtResource("3_gf7wg")]
position = Vector2(138, 184)

[node name="MegaGhost" parent="." instance=ExtResource("4_busjt")]
position = Vector2(130, 37)

[node name="LeftColl" type="Area2D" parent="."]
collision_layer = 255
collision_mask = 255

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftColl"]
position = Vector2(-304.5, 84)
shape = SubResource("RectangleShape2D_busjt")

[node name="UpColl" type="Area2D" parent="."]
collision_layer = 255
collision_mask = 255

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpColl"]
position = Vector2(67, -204)
shape = SubResource("RectangleShape2D_adp6g")

[node name="DownColl" type="Area2D" parent="."]
collision_layer = 255
collision_mask = 255

[node name="CollisionShape2D" type="CollisionShape2D" parent="DownColl"]
position = Vector2(109, 372)
shape = SubResource("RectangleShape2D_2wnqr")

[node name="RightColl" type="Area2D" parent="."]
collision_layer = 255
collision_mask = 255

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightColl"]
position = Vector2(564.5, 65)
shape = SubResource("RectangleShape2D_06qbf")

[connection signal="body_entered" from="LeftColl" to="." method="_on_left_coll_body_entered"]
[connection signal="body_entered" from="UpColl" to="." method="_on_up_coll_body_entered"]
[connection signal="body_entered" from="DownColl" to="." method="_on_down_coll_body_entered"]
[connection signal="body_entered" from="RightColl" to="." method="_on_right_coll_body_entered"]
